apps/k8s/network-policies/4-allow_egress_outside.yaml
# allows connection from LB from all over internet to our frontend app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-frontend
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
